2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* docs/C/multiload.xml: two little fixes (case and punctuation)
	* docs/Makefile.am:
	* docs/fr/*: add french translation by Christophe Bliard
	<christophe.bliard@trux.info>
	* docs/*: .cvsignore love

2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* docs/C/multiload.xml: fix bad copy and paste: s/Network/Harddisk/
	Fix bug #326106

2005-11-12  Benoît Dejean  <benoit@placenet.org>

	* linux-proc.c: #if 0 dead code.
	* load-graph.c: (load_graph_load_config): Fixed format string.
	* main.c: removed PANEL_APPLET_BONOBO_FACTORY trailing ;

	Patch from Kjartan Maraas <kmaraas@gnome.org>
	See #321266.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* linux-proc.c: (GetLoad): Removed a little workaround that is now
	broken with libgtop 2.11.92.
	This fixes idle and iowait.
	iowait now also includes irq and softirq.

2005-08-22  Ryan Lortie  <desrt@desrt.ca>

	* cpuload.c:
	* memload.c:
	* netload.c:
	* diskload.c:
	* swapload.c:
	* loadavg.c: These 6 files have been removed from CVS.

	* Makefile.am: Remove the above 6 files from
	  multiload_applet_2_SOURCES.

	* global.h (struct _LoadGraph, struct _MultiloadApplet):
	  Change "Applet" backref in LoadGraph to "MultiloadApplet".
	  Add an 'id' to each LoadGraph so it knows its own number.
	  Fix 'const'ness on 'name' field in LoadGraph.
	  Add 'notebook' field to MultiloadApplet to allow page switching.
	  Add 'last_clicked' field so we know what page to switch to.
	  Remove prototypes for the 6 deleted C files above.

	* load-graph.c (load_graph_unalloc, load_graph_load_config,
	  load_graph_new, load_graph_clicked):
	  Changes to deal with the applet -> multiloadapplet backref change.
	  Add 'clicked' handler to record who received the most recent click.
	  Modify event mask so that we receive click events.