@@ -1,3 +1,9 @@
+2006-01-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* linux-proc.c: (GetLoad), (GetSwap), (GetLoadAvg): Fix
+	random drawing problems in the graph. (Baz Zoetekouw)
+	Closes bug #320074.
+
 2006-01-07  Vincent Untz  <vuntz@gnome.org>
 
 	* docs/C/multiload.xml: two little fixes (case and punctuation)
